# DCC_Structural_Design_tool

./: CMakeLists.txt  PCCstandard.docx  TechnicalManual.docx  ~$chnicalManual.docx
PCC_sources/Voronoi_1k/coordinates/: face_seeds.txt
PCC_sources/Voronoi_250/algebraic/: A0.txt  A1.txt  A2.txt  (+4 more)
buildtree/: Makefile  PCC_Processing_Design
buld/: Makefile  PCC_Processing_Design
config/: characterisation.ini  main.ini  multiphysics.ini  processing.ini  subcomplex.ini  writer.ini
config/CPD_material_database/: Zr_NC.ini  rGO.ini
results/: Agglomeration_powder3.gpj  Macrocrack_D_sFace_fractions.txt  Macrocrack_agglomeration_coordinates.txt  Macrocrack_agglomeration_powers.txt  Macrocrack_stress_field.txt
results/100k_mf/: 005_100k_Macrocrack_stress_field.txt  01_100k_Macrocrack_stress_field.txt  02_100k_Macrocrack_stress_field.txt  03_100k_Macrocrack_stress_field.txt
results/100k_probe/: Macrocrack_D_sFace_fractions.txt  Macrocrack_agglomeration_coordinates.txt  Macrocrack_agglomeration_powers.txt
results/sfaces_coordinates/: 1k_Macrocrack_sfaces_numbers_in_planes.txt  flakes_Macrocrack_D_sFace_fractions.txt  flakes_Macrocrack_sfaces_numbers_in_planes.txt
src/: main.cpp
src/lib/: PCC_Measures.cpp  PCC_Measures.h  PCC_Objects.cpp  PCC_Objects.h  PCC_Support_Functions.cpp  PCC_Support_Functions.h
src/tasks/: calculation_face_edge_barycentre_coordinates.cpp  calculation_face_edge_barycentre_coordinates.h  energy_levels.cpp  energy_levels.h  fibre_composite_seed_generator.cpp  fibre_composite_seed_generator.h  macrocrack_growth.cpp  macrocrack_growth.h
(+38 files in other folders)
